# school-telegram-bot

./: main.py  pyproject.toml  requirements.txt  settings.py
admin/: __init__.py  forms.py  views.py
admin/templates/: base.html  home.html
db/: db.py  models.py  utils.py
logger/: logger.py
school_bot/: __main__.py  config.py  db.sqlite
school_bot/admin/: __init__.py  views.py
school_bot/admin/static/css/: style.css
school_bot/db/: __init__.py  errors.py  models.py  utils.py
school_bot/logger/: __init__.py
school_bot/services/bot/: __init__.py  botMessages.py  handlers.py  utils.py
school_bot/services/lessonsSchedule/: lessonsSender.py  scheduleChecker.py  weeklySchedule.py
services/bot/: bot.py  botMessages.py  handlers.py  utils.py
services/lessonsSchedule/: .lessonsSender.py.swp  .weeklySchedule.py.swp  lessonsSender.py  scheduleChecker.py  weeklySchedule.py
